src/styles/app.css
:root {
  --black: #000000;
  --blue-dark: #00475d;
  --blue-gray-dark: #617275;
  --blue-gray-light: #9eacae;
  --blue-light: #5081a4;
  --blue: #285f77;
  --gray: #f8f8f8;
  --gray-dark: #5c5c5c;
  --white: #ffffff;

  --weight-bold: 700;
  --weight-bold-extra: 800;
  --weight-bold-light: 600;
  --weight-normal: 400;

  --font-large: 1.5rem;
  --font-medium: 1rem;
  --font-small: 0.875rem;
  --font-tiny: 0.75rem;

  --default-font-color: var(--black);
  --default-font-size: 16px;

  --sans-serif: Public Sans, Helvetica, Arial, sans-serif;
}

html,
body {
  height: 100%;
  overflow: hidden;
}

html {
  color: var(--default-font-color);
  font-family: var(--sans-serif);
  font-size: var(--default-font-size);
  font-weight: var(--weight-normal);
  line-height: 1.5;
}

body {
  margin: 0;
}

